# HTTP-simple-server

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  http.cpp  http.h  http_server  main.cpp  tcp.cpp  tcp.h
conf/: server.conf
html/: about.html  index.html  page404.html
http_parser/: header.cpp  header.h  http_parser.cpp  http_parser.h  request.cpp  request.h  response.cpp  response.h
src/: CMakeLists.txt  http.cpp  http.h  main.cpp  tcp.cpp  tcp.h
src/config_parser/include/: config_parser.h
src/config_parser/src/: config_parser.cpp
src/html/: about.html
src/http/: CMakeLists.txt  http.cpp  http.h
src/http_parser/: CMakeLists.txt  http_parser.cpp  response.cpp
src/http_parser/src/: http_parser.cpp  http_response.cpp
src/net/: CMakeLists.txt  net.h
src/net/include/: tcp.h
src/net/src/: tcp.cpp
src/response/: CMakeFIles.txt  response.h
src/tcp/: CMakeLists.txt  tcp.cpp
